--- a/src/me/stijn/discordpackage/gui/MessageStats.fxml
+++ b/src/me/stijn/discordpackage/gui/MessageStats.fxml
@@ -7,14 +7,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="pane" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.stijn.discordpackage.controllers.MessageStatsController">
+<AnchorPane fx:id="pane" prefHeight="540.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.stijn.discordpackage.controllers.MessageStatsController">
    <children>
       <FlowPane prefHeight="200.0" prefWidth="200.0" />
-      <TableView fx:id="mostusedchats" editable="true" layoutX="14.0" layoutY="14.0" prefHeight="284.0" prefWidth="373.0">
+      <TableView fx:id="mostusedchats" focusTraversable="false" layoutX="14.0" layoutY="4.0" prefHeight="278.0" prefWidth="373.0">
         <columns>
-          <TableColumn fx:id="sender" editable="false" prefWidth="229.0" sortable="false" text="Channel" />
-          <TableColumn fx:id="count" editable="false" minWidth="0.0" prefWidth="143.0" text="Messages" />
+          <TableColumn fx:id="mostSentChannelSender" editable="false" prefWidth="212.0" sortable="false" text="Channel" />
+          <TableColumn fx:id="mostSentChannelCount" editable="false" minWidth="0.0" prefWidth="160.0" sortType="DESCENDING" text="Messages" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
       <LineChart fx:id="daychart" createSymbols="false" layoutX="403.0" layoutY="14.0" legendVisible="false" prefHeight="284.0" prefWidth="393.0" title="Usage by hour">
         <xAxis>
@@ -24,5 +27,14 @@
           <NumberAxis label="Amount of messages" prefHeight="222.0" prefWidth="44.0" side="LEFT" />
         </yAxis>
       </LineChart>
+      <TableView fx:id="mostUsedWords" focusTraversable="false" layoutX="14.0" layoutY="291.0" prefHeight="236.0" prefWidth="373.0">
+        <columns>
+          <TableColumn fx:id="mostUsedWordsWord" prefWidth="212.0" text="Word" />
+          <TableColumn fx:id="mostUsedWordsCount" prefWidth="159.0" text="Count" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </AnchorPane>
