--- a/src/me/stijn/discordpackage/gui/FileSelection.fxml
+++ b/src/me/stijn/discordpackage/gui/FileSelection.fxml
@@ -14,7 +14,7 @@
             <Font name="Bebas" size="16.0" />
          </font>
       </Button>
-      <Button layoutX="320.0" layoutY="87.0" mnemonicParsing="false" onAction="#onFileOpenButton" prefHeight="66.0" prefWidth="160.0" text="Open  file">
+      <Button layoutX="281.0" layoutY="80.0" mnemonicParsing="false" onAction="#onFileOpenButton" prefHeight="66.0" prefWidth="241.0" text="Open  directory">
          <font>
             <Font name="Bebas" size="28.0" />
          </font>
